# vdbfusion

./: .clang-format  .cmake-format.yaml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.txt  Makefile  README.md  \  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
ci/: build-wheels.sh  run_clang_format.sh  test-wheels.sh
docker/builder/: Dockerfile
docker/pip/: Dockerfile
examples/: CMakeLists.txt
examples/cpp/: .gitignore  CMakeLists.txt  Makefile  kitti_pipeline.cpp
examples/cpp/config/: kitti.yaml
examples/cpp/datasets/: CMakeLists.txt  KITTIOdometry.cpp  KITTIOdometry.h
examples/cpp/utils/: Config.h  Enumerate.h  Iterable.h  Timers.h
examples/notebooks/: .gitignore  kitti_odometry.ipynb
examples/python/: Makefile  apollo_pipeline.py  bunny_pieline.py  cow_pipeline.py  icl_pipeline.py  kitti_pipeline.py  newer_college_pipeline.py  nuscenes_pipeline.py  pointcloud_pipeline.py  requirements.txt  scannet_pipeline.py  tum_pipeline.py  vdbfusion_pipeline.py
examples/python/config/: apollo.yaml  bunny.yaml  cow.yaml  icl.yaml  kitti.yaml  newer_college.yaml  nuscnes.yaml  tum.yaml
examples/python/datasets/: __init__.py  apollo.py  bunny.py  cow.py  icl.py  kitti_odometry.py  newer_college.py  nuscenes.py  scannet.py  tum.py
examples/python/utils/: __init__.py  cache.py  config.py
src/: CMakeLists.txt
src/vdbfusion/: CMakeLists.txt  __init__.py
src/vdbfusion/pybind/: CMakeLists.txt  __init__.py  pyopenvdb.h  stl_vector_eigen.h  vdb_volume.py  vdbfusion_pybind.cpp
src/vdbfusion/vdbfusion/: CMakeLists.txt  Colors.h  MarchingCubes.cpp  MarchingCubesConst.h  VDBFusionConfig.cmake.in  VDBVolume.cpp  VDBVolume.h
src/vdbfusion/vdbfusion/cmake/: Install.cmake  Uninstall.cmake
src/vdbfusion/vdbfusion/tests/: CMakeLists.txt  VDBVolumeTest.cpp
tests/: test_installation.py  test_vdbfusion.py
